--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,54 @@
-- name: generate-snake-game-from-github-contribution-grid
-  uses: Platane/snk@v2.2.1
-  with:
-    # github user name to read the contribution graph from (**required**)
-    # using action context var `github.repository_owner` or specified user
-    github_user_name: ${{ github.repository_owner }}
+name: generate-snake-game-from-github-contribution-grid
 
-    # list of files to generate.
-    # one file per line. Each output can be customized with options as query string.
-    #
-    #  supported options:
-    #  - palette:     A preset of color, one of [github, github-dark, github-light]
-    #  - color_snake: Color of the snake
-    #  - color_dots:  Coma separated list of dots color.
-    #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
-    #                 Exactly 5 colors are expected.
-    outputs: |
-      dist/github-snake.svg
-      dist/github-snake-dark.svg?palette=github-dark
-      dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+# Credit to https://github.com/Platane/Platane/tree/master for making this possible
+
+on:
+  # run every 24 hours
+  schedule:
+    - cron: "0 */24 * * *"
+  
+  # allows to manyally run the job at any time
+  workflow_dispatch:
+
+  # run on every push on the master branch
+  push:
+    branches:
+    - master
+  
+
+  jobs:
+    generate:
+      runs-on: ubuntu-latest
+      timeout-minutes: 10
+
+      steps:
+        # generates a snake game from the Platane/snk
+        - name: generate github contribution grid snake
+          uses: Platane/snk@v2.2.1
+          with:
+            # github user name to read the contribution graph from (**required**)
+            # using action context var `github.repository_owner` or specified user
+            github_user_name: ${{ github.repository_owner }}
+
+            # list of files to generate.
+            # one file per line. Each output can be customized with options as query string.
+            #
+            #  supported options:
+            #  - palette:     A preset of color, one of [github, github-dark, github-light]
+            #  - color_snake: Color of the snake
+            #  - color_dots:  Coma separated list of dots color.
+            #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+            #                 Exactly 5 colors are expected.
+            outputs: |
+              dist/github-snake.svg
+              dist/github-snake-dark.svg?palette=github-dark
+              dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
+        - name: push github contribution grid snake to the output branch
+          uses: crazy-max/ghaction-github-pages@v3.1.0
+          with:
+            target_branch: output
+            build_dir: dist
+            commit_message: "update snake game"
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
